--- a/bot_Identification.ipynb
+++ b/bot_Identification.ipynb
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "id": "4dm9q1g-xWEV"
    },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "id": "Ffxulg2PAPHm"
    },
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "id": "W_xb5nC8BB93"
    },
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -309,57 +309,26 @@
     "id": "XaJa77klBCaG",
     "outputId": "a2efa7e8-aa64-49ab-efc6-b9624c6cd04a"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/3\n",
-      "36417/36417 [==============================] - 803s 22ms/step - loss: 0.6359 - accuracy: 0.6217\n",
-      "Epoch 2/3\n",
-      "36417/36417 [==============================] - 792s 22ms/step - loss: 0.6030 - accuracy: 0.6692\n",
-      "Epoch 3/3\n",
-      "36417/36417 [==============================] - 777s 21ms/step - loss: 0.5763 - accuracy: 0.6910\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "epochs = 3 # higher number of epochs leads to overfitting\n",
+    "epochs = 5\n",
     "history = model.fit(train_ds, epochs=epochs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "36417/36417 [==============================] - 237s 7ms/step\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([ 5917,  8464,  4379, ..., 34852, 34851, 12311])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from cleanlab.filter import find_label_issues\n",
     "\n",
     "probs = model.predict(train_ds.map(lambda x, y: x))\n",
-    "probs = np.column_stack([[1-num for num in probs], probs])\n",
+    "probs_2class = np.column_stack([[1-num for num in probs], probs])\n",
     "\n",
     "ordered_label_issues = find_label_issues(\n",
     "    labels=dataset_df['Answer'],\n",
-    "    pred_probs=probs,\n",
+    "    pred_probs=probs_2class,\n",
     "    return_indices_ranked_by='self_confidence',\n",
     ")\n",
     "\n",
@@ -368,34 +337,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['A3OCJJMRKAIJZA', 'A3BCKNE5CWHODZ', 'A3BJX6UUSOIKFN',\n",
-       "       'A3MV3PT4TOO69P', 'A1MG8KNVSVZ365', 'ARW1TCHCLEK1W',\n",
-       "       'AQIP3DSYXEXX5', 'A3BISMR4GI02ZG', 'A1MJVTR0PCKBWW',\n",
-       "       'A3124SRR191UIL', 'A2LU259QPV1I4V', 'A2GM5BW75YCKKW',\n",
-       "       'AYTH0E5PUXWX8', 'A2WPHVMLLEV5ZB', 'A2A78DMGLC1S0Y',\n",
-       "       'A1R0689JPSQ3OF', 'A33B85TN97HQ33', 'A19X8IA9EKC3XH',\n",
-       "       'AG36U7IOG2LAP', 'AAX9LTAOIBECD', 'AKQAI78JTXXC9',\n",
-       "       'A1M5BJTQIXCM33', 'A16184N1RO5OJV', 'AOOF0H0EIEFFQ',\n",
-       "       'AMYURTQIMAC8T', 'A9HQ3E0F2AGVO', 'A2R25RH05K0B68',\n",
-       "       'AR9AU5FY1S3RO', 'A2CJFO19NY4T5R', 'A3HYCA7N5F6DL9',\n",
-       "       'A2KHLJ2F58BEZK', 'A33Y36Y252Z30U', 'A1YSYI926BBOHW',\n",
-       "       'A2HM35CWB7IIFM', 'AD1ILDUXZHASF', 'A198H320N5MSXX',\n",
-       "       'A292TFDMNVS0TP', 'AGRYG65WJ1CKJ', 'A1DP551UV06FN6',\n",
-       "       'AKSLU0C30G3JT', 'AC95JAUAM2L2Z', 'A2R28HXAEFKBPC',\n",
-       "       'AJQGWGESKQT4Y', 'AXY0D2AMLKE2A', 'A2VQBOJJ8HD6W9'], dtype=object)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "probably_bots = pd.unique(dataset_df.loc[ordered_label_issues, 'Annotator ID'])\n",
     "probably_bots"
@@ -403,226 +347,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>botID</th>\n",
-       "      <th>number_of_answers</th>\n",
-       "      <th>number_of_errors</th>\n",
-       "      <th>% of errors</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A3OCJJMRKAIJZA</td>\n",
-       "      <td>5001</td>\n",
-       "      <td>1911</td>\n",
-       "      <td>38.212358</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A3BCKNE5CWHODZ</td>\n",
-       "      <td>1443</td>\n",
-       "      <td>523</td>\n",
-       "      <td>36.243936</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A3BJX6UUSOIKFN</td>\n",
-       "      <td>1472</td>\n",
-       "      <td>713</td>\n",
-       "      <td>48.437500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>A3MV3PT4TOO69P</td>\n",
-       "      <td>5126</td>\n",
-       "      <td>1153</td>\n",
-       "      <td>22.493172</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>A1MG8KNVSVZ365</td>\n",
-       "      <td>3561</td>\n",
-       "      <td>1323</td>\n",
-       "      <td>37.152485</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>ARW1TCHCLEK1W</td>\n",
-       "      <td>1042</td>\n",
-       "      <td>193</td>\n",
-       "      <td>18.522073</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>AQIP3DSYXEXX5</td>\n",
-       "      <td>3469</td>\n",
-       "      <td>1349</td>\n",
-       "      <td>38.887287</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>A3BISMR4GI02ZG</td>\n",
-       "      <td>3589</td>\n",
-       "      <td>795</td>\n",
-       "      <td>22.151017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>A1MJVTR0PCKBWW</td>\n",
-       "      <td>980</td>\n",
-       "      <td>72</td>\n",
-       "      <td>7.346939</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>A3124SRR191UIL</td>\n",
-       "      <td>205</td>\n",
-       "      <td>38</td>\n",
-       "      <td>18.536585</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            botID  number_of_answers  number_of_errors  % of errors\n",
-       "0  A3OCJJMRKAIJZA               5001              1911    38.212358\n",
-       "1  A3BCKNE5CWHODZ               1443               523    36.243936\n",
-       "2  A3BJX6UUSOIKFN               1472               713    48.437500\n",
-       "3  A3MV3PT4TOO69P               5126              1153    22.493172\n",
-       "4  A1MG8KNVSVZ365               3561              1323    37.152485\n",
-       "5   ARW1TCHCLEK1W               1042               193    18.522073\n",
-       "6   AQIP3DSYXEXX5               3469              1349    38.887287\n",
-       "7  A3BISMR4GI02ZG               3589               795    22.151017\n",
-       "8  A1MJVTR0PCKBWW                980                72     7.346939\n",
-       "9  A3124SRR191UIL                205                38    18.536585"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bots_df = pd.DataFrame(data=probably_bots, columns=['botID'])\n",
     "bots_df['number_of_answers'] = [dataset_df.loc[dataset_df['Annotator ID']==botID].shape[0] for botID in probably_bots]\n",
     "bots_df['number_of_errors'] = [dataset_df.loc[ordered_label_issues].loc[dataset_df['Annotator ID']==botID].shape[0] for botID in probably_bots]\n",
-    "bots_df['% of errors'] = bots_df['number_of_errors'] / bots_df['number_of_answers'] * 100\n",
+    "bots_df['%_of_errors'] = bots_df['number_of_errors'] / bots_df['number_of_answers'] * 100\n",
     "bots_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>botID</th>\n",
-       "      <th>number_of_answers</th>\n",
-       "      <th>number_of_errors</th>\n",
-       "      <th>% of errors</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A3OCJJMRKAIJZA</td>\n",
-       "      <td>5001</td>\n",
-       "      <td>1911</td>\n",
-       "      <td>38.212358</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A3BCKNE5CWHODZ</td>\n",
-       "      <td>1443</td>\n",
-       "      <td>523</td>\n",
-       "      <td>36.243936</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A3BJX6UUSOIKFN</td>\n",
-       "      <td>1472</td>\n",
-       "      <td>713</td>\n",
-       "      <td>48.437500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>A1MG8KNVSVZ365</td>\n",
-       "      <td>3561</td>\n",
-       "      <td>1323</td>\n",
-       "      <td>37.152485</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>AQIP3DSYXEXX5</td>\n",
-       "      <td>3469</td>\n",
-       "      <td>1349</td>\n",
-       "      <td>38.887287</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            botID  number_of_answers  number_of_errors  % of errors\n",
-       "0  A3OCJJMRKAIJZA               5001              1911    38.212358\n",
-       "1  A3BCKNE5CWHODZ               1443               523    36.243936\n",
-       "2  A3BJX6UUSOIKFN               1472               713    48.437500\n",
-       "4  A1MG8KNVSVZ365               3561              1323    37.152485\n",
-       "6   AQIP3DSYXEXX5               3469              1349    38.887287"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "bots_df.loc[(bots_df['% of errors'] > 30) & (bots_df['number_of_answers'] > 1000)]"
+    "suspicious_df = pd.DataFrame.copy(bots_df.loc[(bots_df['%_of_errors'] > 30) & (bots_df['number_of_answers'] > 1000)])\n",
+    "suspicious_df['answer_count_True'] = [dataset_df.loc[dataset_df['Annotator ID']==botID, 'Answer'].value_counts()[1] for botID in suspicious_df['botID']]\n",
+    "suspicious_df['answer_count_False'] = [dataset_df.loc[dataset_df['Annotator ID']==botID, 'Answer'].value_counts()[0] for botID in suspicious_df['botID']]\n",
+    "suspicious_df"
    ]
   },
   {
