--- a/bot_Identification.ipynb
+++ b/bot_Identification.ipynb
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "4dm9q1g-xWEV"
    },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "Ffxulg2PAPHm"
    },
@@ -279,7 +279,7 @@
     "  vectorize_layer,\n",
     "  layers.Embedding(max_features, 64, mask_zero=True),\n",
     "  layers.Bidirectional(layers.LSTM(64)),\n",
-    "  layers.Dense(32),#, activation='relu'\n",
+    "  layers.Dense(32),\n",
     "  layers.Dropout(0.2),\n",
     "  layers.Dense(1, activation='sigmoid')\n",
     "])"
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "W_xb5nC8BB93"
    },
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -309,7 +309,24 @@
     "id": "XaJa77klBCaG",
     "outputId": "a2efa7e8-aa64-49ab-efc6-b9624c6cd04a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "36417/36417 [==============================] - 796s 22ms/step - loss: 0.6337 - accuracy: 0.6248\n",
+      "Epoch 2/5\n",
+      "36417/36417 [==============================] - 781s 21ms/step - loss: 0.5991 - accuracy: 0.6712\n",
+      "Epoch 3/5\n",
+      "36417/36417 [==============================] - 777s 21ms/step - loss: 0.5697 - accuracy: 0.6957\n",
+      "Epoch 4/5\n",
+      "36417/36417 [==============================] - 784s 22ms/step - loss: 0.5399 - accuracy: 0.7172\n",
+      "Epoch 5/5\n",
+      "36417/36417 [==============================] - 782s 21ms/step - loss: 0.5120 - accuracy: 0.7285\n"
+     ]
+    }
+   ],
    "source": [
     "epochs = 5\n",
     "history = model.fit(train_ds, epochs=epochs)"
@@ -317,9 +334,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36417/36417 [==============================] - 222s 6ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([20746, 22825, 17323, ..., 23401, 22088, 22086])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from cleanlab.filter import find_label_issues\n",
     "\n",
@@ -337,9 +372,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['A3BJX6UUSOIKFN', 'A3OCJJMRKAIJZA', 'A1MG8KNVSVZ365',\n",
+       "       'A3MV3PT4TOO69P', 'AQIP3DSYXEXX5', 'ARW1TCHCLEK1W',\n",
+       "       'AYTH0E5PUXWX8', 'A3BCKNE5CWHODZ', 'A3124SRR191UIL',\n",
+       "       'A2WPHVMLLEV5ZB', 'A2GM5BW75YCKKW', 'A1MJVTR0PCKBWW',\n",
+       "       'AKQAI78JTXXC9', 'AR9AU5FY1S3RO', 'A3BISMR4GI02ZG',\n",
+       "       'A2A78DMGLC1S0Y', 'A2LU259QPV1I4V', 'AG36U7IOG2LAP',\n",
+       "       'AOOF0H0EIEFFQ', 'A1M5BJTQIXCM33', 'A2R25RH05K0B68',\n",
+       "       'A1YSYI926BBOHW', 'AMYURTQIMAC8T', 'A2KHLJ2F58BEZK',\n",
+       "       'A9HQ3E0F2AGVO', 'A3HYCA7N5F6DL9', 'AC95JAUAM2L2Z',\n",
+       "       'A19X8IA9EKC3XH', 'AD1ILDUXZHASF', 'A2HM35CWB7IIFM',\n",
+       "       'AJQGWGESKQT4Y', 'A33Y36Y252Z30U', 'A1R0689JPSQ3OF',\n",
+       "       'AAX9LTAOIBECD', 'A16184N1RO5OJV', 'A2CJFO19NY4T5R',\n",
+       "       'A292TFDMNVS0TP', 'AGRYG65WJ1CKJ', 'A33B85TN97HQ33',\n",
+       "       'AXY0D2AMLKE2A', 'A1DP551UV06FN6', 'A198H320N5MSXX',\n",
+       "       'A2QTL039A5VV3I', 'A2JP9IKRHNLRPI'], dtype=object)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "probably_bots = pd.unique(dataset_df.loc[ordered_label_issues, 'Annotator ID'])\n",
     "probably_bots"
@@ -347,9 +407,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>botID</th>\n",
+       "      <th>number_of_answers</th>\n",
+       "      <th>number_of_errors</th>\n",
+       "      <th>%_of_errors</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A3BJX6UUSOIKFN</td>\n",
+       "      <td>1472</td>\n",
+       "      <td>603</td>\n",
+       "      <td>40.964674</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A3OCJJMRKAIJZA</td>\n",
+       "      <td>5001</td>\n",
+       "      <td>1746</td>\n",
+       "      <td>34.913017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A1MG8KNVSVZ365</td>\n",
+       "      <td>3561</td>\n",
+       "      <td>1187</td>\n",
+       "      <td>33.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A3MV3PT4TOO69P</td>\n",
+       "      <td>5126</td>\n",
+       "      <td>1039</td>\n",
+       "      <td>20.269216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AQIP3DSYXEXX5</td>\n",
+       "      <td>3469</td>\n",
+       "      <td>1277</td>\n",
+       "      <td>36.811761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ARW1TCHCLEK1W</td>\n",
+       "      <td>1042</td>\n",
+       "      <td>162</td>\n",
+       "      <td>15.547025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>AYTH0E5PUXWX8</td>\n",
+       "      <td>864</td>\n",
+       "      <td>124</td>\n",
+       "      <td>14.351852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>A3BCKNE5CWHODZ</td>\n",
+       "      <td>1443</td>\n",
+       "      <td>450</td>\n",
+       "      <td>31.185031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>A3124SRR191UIL</td>\n",
+       "      <td>205</td>\n",
+       "      <td>38</td>\n",
+       "      <td>18.536585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>A2WPHVMLLEV5ZB</td>\n",
+       "      <td>334</td>\n",
+       "      <td>49</td>\n",
+       "      <td>14.670659</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            botID  number_of_answers  number_of_errors  %_of_errors\n",
+       "0  A3BJX6UUSOIKFN               1472               603    40.964674\n",
+       "1  A3OCJJMRKAIJZA               5001              1746    34.913017\n",
+       "2  A1MG8KNVSVZ365               3561              1187    33.333333\n",
+       "3  A3MV3PT4TOO69P               5126              1039    20.269216\n",
+       "4   AQIP3DSYXEXX5               3469              1277    36.811761\n",
+       "5   ARW1TCHCLEK1W               1042               162    15.547025\n",
+       "6   AYTH0E5PUXWX8                864               124    14.351852\n",
+       "7  A3BCKNE5CWHODZ               1443               450    31.185031\n",
+       "8  A3124SRR191UIL                205                38    18.536585\n",
+       "9  A2WPHVMLLEV5ZB                334                49    14.670659"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bots_df = pd.DataFrame(data=probably_bots, columns=['botID'])\n",
     "bots_df['number_of_answers'] = [dataset_df.loc[dataset_df['Annotator ID']==botID].shape[0] for botID in probably_bots]\n",
@@ -360,9 +541,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>botID</th>\n",
+       "      <th>number_of_answers</th>\n",
+       "      <th>number_of_errors</th>\n",
+       "      <th>%_of_errors</th>\n",
+       "      <th>answer_count_True</th>\n",
+       "      <th>answer_count_False</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A3BJX6UUSOIKFN</td>\n",
+       "      <td>1472</td>\n",
+       "      <td>603</td>\n",
+       "      <td>40.964674</td>\n",
+       "      <td>1457</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A3OCJJMRKAIJZA</td>\n",
+       "      <td>5001</td>\n",
+       "      <td>1746</td>\n",
+       "      <td>34.913017</td>\n",
+       "      <td>3588</td>\n",
+       "      <td>1413</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A1MG8KNVSVZ365</td>\n",
+       "      <td>3561</td>\n",
+       "      <td>1187</td>\n",
+       "      <td>33.333333</td>\n",
+       "      <td>1933</td>\n",
+       "      <td>1628</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AQIP3DSYXEXX5</td>\n",
+       "      <td>3469</td>\n",
+       "      <td>1277</td>\n",
+       "      <td>36.811761</td>\n",
+       "      <td>1877</td>\n",
+       "      <td>1592</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>A3BCKNE5CWHODZ</td>\n",
+       "      <td>1443</td>\n",
+       "      <td>450</td>\n",
+       "      <td>31.185031</td>\n",
+       "      <td>1128</td>\n",
+       "      <td>315</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            botID  number_of_answers  number_of_errors  %_of_errors  \\\n",
+       "0  A3BJX6UUSOIKFN               1472               603    40.964674   \n",
+       "1  A3OCJJMRKAIJZA               5001              1746    34.913017   \n",
+       "2  A1MG8KNVSVZ365               3561              1187    33.333333   \n",
+       "4   AQIP3DSYXEXX5               3469              1277    36.811761   \n",
+       "7  A3BCKNE5CWHODZ               1443               450    31.185031   \n",
+       "\n",
+       "   answer_count_True  answer_count_False  \n",
+       "0               1457                  15  \n",
+       "1               3588                1413  \n",
+       "2               1933                1628  \n",
+       "4               1877                1592  \n",
+       "7               1128                 315  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "suspicious_df = pd.DataFrame.copy(bots_df.loc[(bots_df['%_of_errors'] > 30) & (bots_df['number_of_answers'] > 1000)])\n",
     "suspicious_df['answer_count_True'] = [dataset_df.loc[dataset_df['Annotator ID']==botID, 'Answer'].value_counts()[1] for botID in suspicious_df['botID']]\n",
